Unable to show/hide bone collection on library override armature #111711

Closed
opened 2023-08-30 19:37:54 +02:00 by RedMser · 11 comments
Contributor

System Information
Operating system: Windows-10-10.0.19044-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 2080/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 531.68

Blender Version
Broken: version: 4.0.0 Alpha, branch: main, commit date: 2023-08-30 10:37, hash: e071288ab290
Worked: before !109976 was merged

Short description of error
Visibility of bone collections can not be modified for library override armatures.

image

Exact steps for others to reproduce the error
Create an armature in one blend file.
Link the armature into another blend file.
Add library override and try editing the bone collection visibility.

**System Information** Operating system: Windows-10-10.0.19044-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 2080/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 531.68 **Blender Version** Broken: version: 4.0.0 Alpha, branch: main, commit date: 2023-08-30 10:37, hash: `e071288ab290` Worked: before !109976 was merged **Short description of error** Visibility of bone collections can not be modified for library override armatures. ![image](/attachments/5c8df141-8c87-46c4-9fed-42fd9098fd3f) **Exact steps for others to reproduce the error** Create an armature in one blend file. Link the armature into another blend file. Add library override and try editing the bone collection visibility.
RedMser added the
Severity
Normal
Type
Report
Status
Needs Triage
labels 2023-08-30 19:37:55 +02:00
Member

I can confirm.
@dr.sybren @nathanvegdahl , can you check?

"Worked:" before !109976 was merged

But bone groups did not have the visibility property?

I can confirm. @dr.sybren @nathanvegdahl , can you check? > "Worked:" before !109976 was merged But bone groups did not have the visibility property?
Member

Thanks for the report! Yeah, we just discovered this yesterday. Will use this to track it.

But bone groups did not have the visibility property?

But armature layers did, which bone collections also replace.

Thanks for the report! Yeah, we just discovered this yesterday. Will use this to track it. > But bone groups did not have the visibility property? But armature layers did, which bone collections also replace.
Member

But bone groups did not have the visibility property?

Assume this is about armature layers, they could be overridden in 3.6.

> But bone groups did not have the visibility property? Assume this is about armature layers, they could be overridden in 3.6.
Member

Ah, @nathanvegdahl was quicker...

Will raise prio here, since this is a regression

Ah, @nathanvegdahl was quicker... Will raise prio here, since this is a regression
Philipp Oeser added
Severity
High
and removed
Severity
Normal
labels 2023-08-31 10:34:05 +02:00
Member

Btw. seems like Bone Groups dont actually come over from 3.6 files (only layers do)?
Will check on this.

Btw. seems like Bone Groups dont actually come over from 3.6 files (only layers do)? Will check on this.
Member

Btw. seems like Bone Groups dont actually come over from 3.6 files (only layers do)?
Will check on this.

Ah, only comes over if some bone was actually assigned to that group (is this intended?)

> Btw. seems like Bone Groups dont actually come over from 3.6 files (only layers do)? > Will check on this. Ah, only comes over if some bone was actually assigned to that group (is this intended?)
Member

Proposed fix in !111775

Proposed fix in !111775
Member

Ah, only comes over if some bone was actually assigned to that group (is this intended?)

Only bring over layers with bones on them was intentional and makes sense. Simply carrying over that same behavior for converting bone groups was also intentional, I think. But we should probably double check with some production people about what's desirable here. @Mets? @Hjalti?

> Ah, only comes over if some bone was actually assigned to that group (is this intended?) Only bring over *layers* with bones on them was intentional and makes sense. Simply carrying over that same behavior for converting bone groups was also intentional, I think. But we should probably double check with some production people about what's desirable here. @Mets? @Hjalti?
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-09-02 10:38:35 +02:00
Member

While bone groups with 0 bones assigned are usually unintended, versioning should still preserve them I feel like, just to be on the safe side. If there was an update to the vertex group system, I would also expect empty vertex groups to survive, even though they are strictly speaking pretty much pointless.

While bone groups with 0 bones assigned are usually unintended, versioning should still preserve them I feel like, just to be on the safe side. If there was an update to the vertex group system, I would also expect empty vertex groups to survive, even though they are strictly speaking pretty much pointless.

While bone groups with 0 bones assigned are usually unintended, versioning should still preserve them I feel like, just to be on the safe side. If there was an update to the vertex group system, I would also expect empty vertex groups to survive, even though they are strictly speaking pretty much pointless.

I agree.

> While bone groups with 0 bones assigned are usually unintended, versioning should still preserve them I feel like, just to be on the safe side. If there was an update to the vertex group system, I would also expect empty vertex groups to survive, even though they are strictly speaking pretty much pointless. I agree.

I just committed @Mets suggestion in bcd0198a46.

I just committed @Mets suggestion in bcd0198a46d8.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#111711
No description provided.