Fix #111711: bone collection visibility cannot be overridden

Since the switch from bone layers to bone collections in
998136f7a7b520ef10c998c5af744eb0d464fdd3, visibility could not be
overridden anymore. Moreso, layer visibility could also be toggled even in linked
state in 3.6 [those changes get lost on file reload, but it was still
useful and expected behavior].

Both are now restored.

Pull Request: https://projects.blender.org/blender/blender/pulls/111775